[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kryptorious-devflow"
version = "1.5.0"
description = "Developer workflow automation CLI — scaffold, audit, fix, and ship projects with one tool."
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.9"
authors = [{name = "Kryptorious Quantum Biosciences, Inc."}]
keywords = ["cli", "developer-tools", "productivity", "scaffold", "code-quality", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "gitpython>=3.1",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.1"]

[project.scripts]
devflow = "devflow.cli:main"

[project.urls]
Homepage = "https://devflow.sh"
Repository = "https://github.com/kryptorious/devflow"

[tool.setuptools.packages.find]
where = ["src"]



